# pyale

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
pyale/: __init__.py  ale_1d_viz_eg.py  ale_stats.py  ale_viz_eg.py
src/pyale/: __init__.py  ale_1d_calcu-eg.py  ale_1d_calcu.py  ale_1d_viz.py
tests/: Test_with_var_cars.ipynb  conftest.py  test_ale_1d_calcul.py  test_ale_1d_viz.py  test_ale_stats.py  var_cars.csv
